# markitdown-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  convert.py  pyproject.toml  skill.md
examples/: advanced.md  basic_usage.md  batch_processing.md
