[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdown-skill"
version = "1.0.0"
description = "Convert documents to Markdown using Microsoft's MarkItDown tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MarkItDown Skill Contributors"}
]
keywords = ["markdown", "document-conversion", "claude-code", "ocr", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.scripts]
markitdown-convert = "convert:main"

[project.urls]
Homepage = "https://github.com/yourusername/markitdown-skill"
Repository = "https://github.com/yourusername/markitdown-skill"
Issues = "https://github.com/yourusername/markitdown-skill/issues"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.md", "*.py"]
